fix display bug on poetry + add helios translations

--- a/poetry.html
+++ b/poetry.html
@@ -51,127 +51,205 @@
             <div class="col-md-9">
                 <p>
                 <h2><b>Poetry</b></h2>
-                <p>I also write poems during free times. I use to go by "N.J.", but now is using "J.S." as an alias.</p>
+                <p>I also write poems during free times. I used to go by "N.J.", but now is using "J.S." as an alias.</p>
             </div>
         </div>
 
         <div class="row mt-5">
-                <div class="col-lg-12 ">
-            <div class="bs-component">
-                <div class="card border-secondary mb-3" style="max-width: 50rem;">
-                    <div class="card-body">
-                        <div class="col-md-3" style="text-align: center;">
-                            <img src="poetry/breaking.jpg" style="width:auto;max-width: 100%"></img>
+            <div class="col-lg-12 ">
+                <h4><b>Originals</b></h4>
+                <p>
+                    <a data-toggle="collapse" href="#breaking" role="button" aria-expanded="false"
+                        aria-controls="breaking">
+                        breaking
+                    </a>
+                </p>
+                <div class="collapse" id="breaking">
+                    <div class="bs-component">
+                        <div class="card border-secondary mb-3" style="max-width: 50rem;">
+                            <div class="card-body">
+                                <img src="poetry/breaking.jpg" class="img-fluid"
+                                    style="max-width: 100%; height:auto"></img>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="bs-component">
-                <div class="card border-secondary mb-3" style="max-width: 50rem;">
-                    <div class="card-body">
-                        <div class="col-md-3" style="text-align: center;">
-                            <img src="poetry/interval.jpg" style="width:auto;max-width: 100%"></img>
+                <p>
+                    <a data-toggle="collapse" href="#interval" role="button" aria-expanded="false"
+                        aria-controls="interval">
+                        Interval
+                    </a>
+                </p>
+                <div class="collapse" id="interval">
+                    <div class="bs-component">
+                        <div class="card border-secondary mb-3" style="max-width: 50rem;">
+                            <div class="card-body">
+                                <img src="poetry/interval.jpg" class="img-fluid"
+                                    style="max-width: 100%; height:auto"></img>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="bs-component">
-                <div class="card border-secondary mb-3" style="max-width: 50rem;">
-                    <div class="card-body">
-                        <div class="col-md-3" style="text-align: center;">
-                            <img src="poetry/petal.jpg" style="width:auto;max-width: 100%"></img>
-                        </div>
-                    </div>
-                </div>
-            </div>
+                <p>
+                    <a data-toggle="collapse" href="#petal" role="button" aria-expanded="false" aria-controls="petal">
+                        Petal
+                    </a>
+                </p>
 
-            <div class="bs-component">
-                <div class="card border-secondary mb-3" style="max-width: 50rem;">
-                    <div class="card-body">
-                        <div class="col-md-3" style="text-align: center;">
-                            <img src="poetry/msd.jpg" style="width:autol;max-width: 100%"></img>
+                <div class="collapse" id="petal">
+                    <div class="bs-component">
+                        <div class="card border-secondary mb-3" style="max-width: 50rem;">
+                            <div class="card-body">
+                                <img src="poetry/Petal.jpg" class="img-fluid"
+                                    style="max-width: 100%; height:auto"></img>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="bs-component">
-                <div class="card border-secondary mb-3" style="max-width: 50rem;">
-                    <div class="card-body">
-                        <div class="col-md-3" style="text-align: center;">
-                            <img src="poetry/RLS1.jpg" style="width:autol;max-width: 100%"></img>
-                            <img src="poetry/RLS2.jpg" style="width:autol;max-width: 100%"></img>
-                        </div>
-                    </div>
-                </div>
-            </div>
+                <p>
+                    <a data-toggle="collapse" href="#MSD" role="button" aria-expanded="false" aria-controls="MSD">
+                        Midsummer Dream
+                    </a>
+                </p>
 
-            <div class="bs-component">
-                <div class="card border-secondary mb-3" style="max-width: 50rem;">
-                    <div class="card-body">
-                        <div class="col-md-3" style="text-align: center;">
-                            <img src="poetry/AGM.jpg" style="width:auto;max-width: 100%"></img>
+                <div class="collapse" id="MSD">
+                    <div class="bs-component">
+                        <div class="card border-secondary mb-3" style="max-width: 50rem;">
+                            <div class="card-body">
+                                <img src="poetry/MSD.jpg" class="img-fluid" style="max-width: 100%; height:auto"></img>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="bs-component">
-                <div class="card border-secondary mb-3" style="max-width: 50rem;">
-                    <div class="card-body">
-                        <div class="col-md-3" style="text-align: center;">
-                            <img src="poetry/vop.jpg" style="width:auto;max-width: 100%"></img>
+                <p>
+                    <a data-toggle="collapse" href="#RLS" role="button" aria-expanded="false" aria-controls="RLS">
+                        Red-Light Street
+                    </a>
+                </p>
+                <div class="collapse" id="RLS">
+                    <div class="bs-component">
+                        <div class="card border-secondary mb-3" style="max-width: 50rem;">
+                            <div class="card-body">
+                                <img src="poetry/RLS1.jpg" class="img-fluid" style="max-width: 100%; height:auto"></img>
+                                <img src="poetry/RLS2.jpg" class="img-fluid" style="max-width: 100%; height:auto"></img>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="bs-component">
-                <div class="card border-secondary mb-3" style="max-width: 50rem;">
-                    <div class="card-body">
-                        <div class="col-md-3" style="text-align: center;">
-                            <img src="poetry/DOF1.jpg" style="width:auto;max-width: 100%"></img>
-                            <img src="poetry/DOF2.jpg" style="width:auto;max-width: 100%"></img>
+                <p>
+                    <a data-toggle="collapse" href="#AGM" role="button" aria-expanded="false" aria-controls="AGM">
+                        Angel Mist
+                    </a>
+                </p>
+                <div class="collapse" id="AGM">
+                    <div class="bs-component">
+                        <div class="card border-secondary mb-3" style="max-width: 50rem;">
+                            <div class="card-body">
+                                <img src="poetry/AGM.jpg" class="img-fluid" style="max-width: 100%; height:auto"></img>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="bs-component">
-                <div class="card border-secondary mb-3" style="max-width: 50rem;">
-                    <div class="card-body">
-                        <div class="col-md-3" style="text-align: center;">
-                            <img src="poetry/WUAS1.jpg" class="width:auto;max-width: 100%"></img>
-                            <img src="poetry/WUAS2.jpg" class="width:auto;max-width: 100%"></img>
+                <p>
+                    <a data-toggle="collapse" href="#VOP" role="button" aria-expanded="false" aria-controls="VOP">
+                        Voice of Peace
+                    </a>
+                </p>
+                <div class="collapse" id="VOP">
+                    <div class="bs-component">
+                        <div class="card border-secondary mb-3" style="max-width: 50rem;">
+                            <div class="card-body">
+                                <img src="poetry/VOP.jpg" class="img-fluid" style="max-width: 100%; height:auto"></img>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+                
+                <p>
+                    <a data-toggle="collapse" href="#DOF" role="button" aria-expanded="false" aria-controls="DOF">
+                        Dear Old Friend
+                    </a>
+                </p>
+                <div class="collapse" id="DOF">
+                    <div class="bs-component">
+                        <div class="card border-secondary mb-3" style="max-width: 50rem;">
+                            <div class="card-body">
+                                <img src="poetry/DOF1.jpg" class="img-fluid" style="max-width: 100%; height:auto"></img>
+                                <img src="poetry/DOF2.jpg" class="img-fluid" style="max-width: 100%; height:auto"></img>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-                <div class="card border-secondary mb-3" style="max-width: 50rem;">
-                    <div class="card-body">
-                        <div class="col-md-3" style="text-align: center;">
-                            <img src="poetry/helios.png" style="width:auto;max-width: 100%"></img>
+                <p>
+                    <a data-toggle="collapse" href="#WUAS" role="button" aria-expanded="false" aria-controls="WUAS">
+                        Wish Upon Another Star
+                    </a>
+                </p>
+                <div class="collapse" id="WUAS">
+                    <div class="bs-component">
+                        <div class="card border-secondary mb-3" style="max-width: 50rem;">
+                            <div class="card-body">
+                                <img src="poetry/WUAS1.jpg" class="img-fluid" style="max-width: 100%; height:auto"></img>
+                                <img src="poetry/WUAS2.jpg" class="img-fluid" style="max-width: 100%; height:auto"></img>
+                            </div>
                         </div>
                     </div>
                 </div>
+
+                <p>
+                    <a data-toggle="collapse" href="#helios" role="button" aria-expanded="false" aria-controls="helios">
+                        Helios
+                    </a>
+                </p>
+                <div class="collapse" id="helios">
+                    <div class="bs-component">
+                        <div class="card border-secondary mb-3" style="max-width: 50rem;">
+                            <div class="card-body">
+                                <img src="poetry/helios.png" class="img-fluid" style="max-width: 100%; height:auto"></img>
+                                <img src="poetry/helios_de.png" class="img-fluid" style="max-width: 100%; height:auto"></img>
+                                <img src="poetry/helios_th.png" class="img-fluid" style="max-width: 100%; height:auto"></img>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <h4><b>Translations</b></h4>
+                <p>
+                    <a data-toggle="collapse" href="#cm" role="button" aria-expanded="false" aria-controls="cm">
+                        เงื่อนผีเสื้อ (Choucho Musubi)
+                    </a>
+                </p>
+                <div class="collapse" id="cm">
+                    <div class="bs-component">
+                        <div class="card border-secondary mb-3" style="max-width: 50rem;">
+                            <div class="card-body">
+                                <img src="poetry/choucho.jpeg" class="img-fluid" style="max-width: 100%; height:auto"></img>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
         </div>
-    </div>
 
-    <footer class="site-footer h-card" style='text-align: center;'>
-		<div class="container center">
-			&copy; 2023 Jitkapat Sawatphol
-		</div>
-	</footer>
-	</div>
-	</div> <!-- /container -->
-	<!-- jQuery (necessary for Bootstrap' s JavaScript plugins) -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<script> $(function () { $("#included_navbar").load("nav.htm"); }); </script>
-	<!-- Bootstrap core JavaScript -->
-	<script src="vendor/jquery/jquery.min.js"></script>
-	<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <footer class="site-footer h-card" style='text-align: center;'>
+            <div class="container center">
+                &copy; 2023 Jitkapat Sawatphol
+            </div>
+        </footer>
+    </div>
+    </div> <!-- /container -->
+    <!-- jQuery (necessary for Bootstrap' s JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script> $(function () { $("#included_navbar").load("nav.htm"); }); </script>
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
-       
