move projects and articles to separate pages

--- a/index.html
+++ b/index.html
@@ -38,7 +38,14 @@
 					<a class="nav-link" href="bio.html">Bio</a>
 				</li>
 				<li class="nav-item">
+					<a class="nav-link" href="projects.html">Projects</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="articles.html">Articles</a>
+				</li>
+				<li class="nav-item">
 					<a class="nav-link" href="poetry.html">Poetry</a>
+				</li>
 			</ul>
 			<!--
 		<form class="form-inline my-2 my-lg-0">
@@ -109,95 +116,9 @@
 						</div>
 					</div>
 				</div>
-				<div class="row mt-5">
-					<div class="col-lg-12 ">
-						<h4><b>Past Projects</b></h4>
-						<div class="bs-component">
-							<div class="card border-secondary mb-3" style="max-width: 50rem;">
-								<div class="card-body">
-									<h5 class="card-title">Thai Part-of-Speech Tagger</h5>
-									<p class="card-text">A part-of-speech tagger for Thai using Universal
-										Dependencies tagset.
-									</p>
-									<p>Research project at <a href="https://attapol.github.io/lab.html">NLP
-											Lab@Chula</a> (2020)</p>
-									<p><a href="hhttps://github.com/jitkapat/thaipostagger">GitHub</a></p>
-								</div>
-							</div>
-						</div>
-						<div class="bs-component">
-							<div class="card border-secondary mb-3" style="max-width: 50rem;">
-								<div class="card-body">
-									<h5 class="card-title">Thai Poetry Generator</h5>
-									<p class="card-text">An experimental Thai poetry generator using character-based RNN
-										language models
-									</p>
-									<p>Final project for 2209372 Introduction to Computational Linguistics (2019)</p>
-									<p><a href="https://github.com/jitkapat/thaipoetrygenerator">GitHub</a> |
-										<a
-											href="https://colab.research.google.com/drive/18RNQODEK5fmqIerBaNbJRPecEJeZbSkC#scrollTo=C9yPptFc3CHy&uniqifier=1">
-											Colab </a>
-									</p>
-								</div>
-							</div>
-							<div class="bs-component">
-								<div class="card border-secondary mb-3" style="max-width: 50rem;">
-									<div class="card-body">
-										<h5 class="card-title">Thai Literature Corpora</h5>
-										<p class="card-text">A compilation of machine-ingestible Thai classical
-											literature texts
-											from <a href="https://vajirayana.org"> Vajirayana Digital Library</a>
-											and Thai National Historical Corpus project at Faculty of Arts,
-											Chulalongkorn
-											University.</p>
-										<p class="card-text"> Internship project at <a
-												href="https://attapol.github.io/lab.html">NLP Lab@Chula</a> (Summer
-											2019)
-										</p>
-										<p class="card-text"> <a href="https://attapol.github.io/tlc.html">Download</a>
-										</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+				
 
-				<div class="row mt-5">
-					<div class="col-lg-12" style="padding-bottom:70px;">
-						<h4><b>Written Articles</b></h4>
-						<div class="bs-component">
-							<div class="card border-secondary mb-3" style="max-width: 50rem;">
-								<div class="card-body">
-									<h5 class="card-title">Word Frequency Visualization for Thai Literature</h5>
-									<p class="card-text">Full article: <a
-											href="https://medium.com/@jitkapat/%E0%B8%AA%E0%B8%B8%E0%B8%99%E0%B8%97%E0%B8%A3%E0%B8%A0%E0%B8%B9%E0%B9%88-%E0%B8%84%E0%B8%A3%E0%B8%B9%E0%B8%81%E0%B8%A7%E0%B8%B5-%E0%B8%9B%E0%B8%B5%E0%B9%84%E0%B8%8B%E0%B9%80%E0%B8%9A%E0%B8%AD%E0%B8%A3%E0%B9%8C-1ebc7813df79">
-											สุนทรภู่ ครูกวี ปีไซเบอร์</a> |
-										<a
-											href="https://colab.research.google.com/drive/175VFbcs7Smnxb_O6dOZvHmSUUkceh97e#scrollTo=5xsl2bwKC3TA">code</a>
-									</p>
-									<p>
-									</p>
-								</div>
-							</div>
-						</div>
-
-						<div class="bs-component">
-							<div class="card border-secondary mb-3" style="max-width: 50rem;">
-								<div class="card-body">
-									<h5 class="card-title">Translation of Emily Dickinson's "Because I could not stop for death" (written in Thai)</h5>
-									<p class="card-text">Full article: <a
-											href="articles/FinalLitTrans.pdf">
-											รายงานการแปลกวีนิพนธ์ "Because I could not stop for Death" ("เพราะว่าฉันมิอาจแวะไปหา (ความตาย)")</a>
-									</p>
-									<p>
-									</p>
-								</div>
-							</div>
-						</div>
-
-					</div>
-				</div>
+				
 			</div>
 		</div>
 	</div>
