Fixed wrong url

--- a/projects.html
+++ b/projects.html
@@ -74,7 +74,7 @@
                         </p>
                         <p>Research project at <a href="https://attapol.github.io/lab.html">NLP
                                 Lab@Chula</a> (2020)</p>
-                        <p><a href="hhttps://github.com/jitkapat/thaipostagger">GitHub</a></p>
+                        <p><a href="https://github.com/jitkapat/thaipostagger">GitHub</a></p>
                     </div>
                 </div>
             </div>
